<resources>
    <string name="app_name">TileDesign</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_title_1">Home</string>
    <string name="fragment_title_2">Edit</string>
    <string name="fragment_title_3">About</string>
    <string name="edit_way_1">Gallery</string>
    <string name="edit_way_2">Camera</string>
    <string name="edit_way_3">Cloud</string>
    <string name="setting_title_aboutme">About us</string>
    <string name="setting_title_donate">Donate / Mark us</string>
    <string name="setting_title_theme">Theme</string>
    <string name="setting_title_advance">Advance</string>
    <string name="editor_panel_offset">Offset</string>
    <string name="editor_panel_col">Column</string>
    <string name="editor_panel_row">Row</string>
    <string name="bt_save">Save</string>
    <string name="edit_text_hint_row">Please input Row...</string>
    <string name="edit_text_hint_col">Please input Column...</string>
    <string name="editor_reset">Reset</string>
    <string name="set_title">Give the name for your work</string>
</resources>
